Fixing the button spacings

--- a/styles/google_advanced_search.scss
+++ b/styles/google_advanced_search.scss
@@ -1,11 +1,5 @@
 $curve: 50px;
 
-#logo
-{
-    padding: 20px;
-    height: 300px;
-}
-
 #not_google
 {
     padding-top: 175px;
@@ -16,16 +10,91 @@ $curve: 50px;
     opacity: 1;
 }
 
-#search_bar
+.logo
 {
-    height: 60px;
-    max-height: 60px;
+    padding: 20px;
+    height: 300px;
 }
 
-#other_pages
+.search_bar
 {
-    padding-top: 100px;
+    //height: 360px;
+    height: auto;
+    padding: 20px;
+    // background-color: red;
+}
+
+.other_pages
+{
+    padding-top: 70px;
+    margin-right: 500px;
     height: 200px;
+    display: inline-flexbox;
+}
+
+.searchButton
+{
+    background-color: white;
+    border-radius: $curve;
+    border: 2px solid black;
+    color: royalblue;
+    width: 70px;
+    height: 60px;
+    cursor: pointer;
+    font-size: 32px;
+    text-align: center;
+    vertical-align: bottom;
+    transition: background-color 100ms linear;
+}
+
+.searchButton:hover
+{
+    background: whitesmoke;
+}
+
+.button
+{
+    height: 50px;
+    width: 350px;
+    text-align: center;
+    font-size: 22px;
+    border: none;
+    cursor: pointer;
+    border-radius: $curve;
+    background-color: lightgray;
+    transition: background-color 150ms linear;
+    color: black
+}
+
+.button:hover
+{
+    background-color: lightcoral;
+    color: white;
+}
+
+.advanced_options > input
+{
+    margin: 5px;
+}
+
+.search_box
+{
+    display: block;
+    margin: 5px;
+}
+
+.google_search
+{
+    width: 50px;
+    float: left;
+    //margin-right: $button_margin;
+}
+
+.google_advanced_search
+{
+    width: 50px;
+    float: right;
+    //padding-right: 50px;
 }
 
 body
@@ -54,50 +123,4 @@ input
 input:focus, button:focus
 {
     outline: none;
-}
-
-.searchButton
-{
-    background-color: white;
-    border-radius: $curve;
-    border: 2px solid black;
-    color: royalblue;
-    width: 70px;
-    height: 60px;
-    cursor: pointer;
-    font-size: 32px;
-    text-align: center;
-    vertical-align: bottom;
-    transition: background-color 100ms linear;
-}
-
-.searchButton:hover
-{
-    background: whitesmoke;
-}
-
-.button:hover
-{
-    background-color: royalblue;
-    color: white;
-}
-
-.homepage
-{
-    width: 100%;
-    position: fixed;
-}
-
-.button
-{
-    height: 50px;
-    width: 300px;
-    text-align: center;
-    font-size: 22px;
-    border: none;
-    cursor: pointer;
-    border-radius: $curve;
-    background-color: lightgray;
-    transition: background-color 150ms linear;
-    color: black
 }
