--- a/styles/google_search.scss
+++ b/styles/google_search.scss
@@ -1,11 +1,5 @@
 $curve: 50px;
 
-#logo
-{
-    padding: 20px;
-    height: 300px;
-}
-
 #not_google
 {
     padding-top: 175px;
@@ -16,16 +10,62 @@ $curve: 50px;
     opacity: 1;
 }
 
-#search_bar
+.logo
+{
+    padding: 20px;
+    height: 300px;
+}
+
+.search_bar
 {
     height: 60px;
     max-height: 60px;
 }
 
-#other_pages
+.other_pages
 {
     padding-top: 100px;
     height: 200px;
+}
+
+.searchButton
+{
+    background-color: white;
+    border-radius: $curve;
+    border: 2px solid black;
+    color: royalblue;
+    width: 70px;
+    height: 60px;
+    cursor: pointer;
+    font-size: 32px;
+    text-align: center;
+    vertical-align: bottom;
+    transition: background-color 100ms linear;
+}
+
+.searchButton:hover
+{
+    background: whitesmoke;
+}
+
+.button
+{
+    height: 50px;
+    width: 300px;
+    text-align: center;
+    font-size: 22px;
+    border: none;
+    cursor: pointer;
+    border-radius: $curve;
+    background-color: lightgray;
+    transition: background-color 150ms linear;
+    color: black
+}
+
+.button:hover
+{
+    background-color: royalblue;
+    color: white;
 }
 
 body
@@ -54,50 +94,4 @@ input
 input:focus, button:focus
 {
     outline: none;
-}
-
-.searchButton
-{
-    background-color: white;
-    border-radius: $curve;
-    border: 2px solid black;
-    color: royalblue;
-    width: 70px;
-    height: 60px;
-    cursor: pointer;
-    font-size: 32px;
-    text-align: center;
-    vertical-align: bottom;
-    transition: background-color 100ms linear;
-}
-
-.searchButton:hover
-{
-    background: whitesmoke;
-}
-
-.button:hover
-{
-    background-color: royalblue;
-    color: white;
-}
-
-.homepage
-{
-    width: 100%;
-    position: fixed;
-}
-
-.button
-{
-    height: 50px;
-    width: 300px;
-    text-align: center;
-    font-size: 22px;
-    border: none;
-    cursor: pointer;
-    border-radius: $curve;
-    background-color: lightgray;
-    transition: background-color 150ms linear;
-    color: black
 }
